Fri Sep 24 14:49:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DAnCE_Properties.mpc:
        * dance/Deployment/Deployment_Core.mpc:
        * dance/DomainApplication/DomainApplication.mpc:
        * dance/DomainApplicationManager/DomainApplicationManager.mpc:
        * dance/LocalityManager/Daemon/Locality_Manager.mpc:
        * dance/LocalityManager/Handler/LocalityHandler.mpc:
        * dance/LocalityManager/Scheduler/Scheduler.mpc:
        * dance/Logger/Logger.mpc:
        * dance/NodeApplication/NodeApplication.mpc:
        * dance/NodeApplicationManager/NodeApplicationManager.mpc:
        * dance/RepositoryManager/RepositoryManager.mpc:

          Various 'make install' fixes.

Fri Sep 24 14:25:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/LocalityManager/ExplicitExec/ExplicitExec.mpc:

          Compile fix.

Fri Sep 24 08:02:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * dance/RepositoryManager/Repository_Manager_Module.h:
        * dance/RepositoryManager/Repository_Manager_Module.cpp:
          Resolved compile error due to movement.

Thu Sep 23 20:41:48 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance:

          Moved most DAnCE code under this directory to match ACE+TAO layout.

        * rules.dance.GNU:

          Updated case of pat to version file.

        * tests/DeploymentPlanDump/test.cpp:
        * tests/DeploymentPlanTestReferences/test.cpp:
        * tests/DeploymentTest1/test.cpp:
        * tests/NameServiceTest/clt_main.cpp:
        * tests/NameServiceTest/srv_main.cpp:
        * tests/NodeApplicationManager-NodeApplication/test.cpp:
        * tests/NodeManager-NodeApplicationManager/test.cpp:
        * tests/Parsing/domain.cpp:
        * tests/Parsing/test.cpp:
        * tools/Artifact_Installation/Artifact_Installation_Handler_Svc.cpp:
        * tools/Artifact_Installation/Artifact_Installation_Impl.h: