@@ -1,3 +1,13 @@
+Mon Sep 27 09:40:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dance/LocalityManager/Handler/DAnCE_Locality_Handler_export.h:
+        * dance/LocalityManager/Interceptors/DAnCE_Error_Interceptors_export.h:
+        * tools/Convert_Plan/DAnCE_Convert_Plan_export.h:
+        * tools/Split_Plan/DAnCE_Split_Plan_export.h:
+        * tools/System_Health/Interceptors/DAnCE_SHS_CORBA_Transport_export.h:
+        * tools/System_Health/Interceptors/DAnCE_SHS_Interceptors_export.h:
+          Removed generated by line
+
 Fri Sep 24 14:49:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * dance/DAnCE_Properties.mpc:
